[package]
name = "ytdlfs"
version = "0.1.0"
authors = ["MetaMuffin <metamuffin@yandex.com>"]
edition = "2018"

[dependencies]
fuse = { git = "https://github.com/zargony/fuse-rs" }
libc = "0.2.51"
log = "0.4.6"
thread-scoped = "1.0.2"
lazy_static = "1.4.0"
json = "0.12.4"

num-traits = "0.2"
num-derive = "0.2"



[dev-dependencies]
env_logger = "0.6.0"